# laravel-online-market

./: .gitignore  .setup  README.md
laravel/: docker-compose.yaml
laravel/config/: postgres.env
laravel/docker/php/: Dockerfile
laravel/nginx/: nginx.conf
laravel/src/database/migrations/: 2024_03_18_062915_create_products_table.php  2024_03_18_070913_create_categories_table.php  2024_03_18_071232_create_subcategories_table.php  2024_03_18_072728_create_reviews_table.php  2024_03_18_073415_users_add_column_role.php  2024_03_18_074032_create_specs_table.php  2024_03_18_074348_create_orders_table.php  2024_03_18_075229_create_order_products_table.php  2024_03_23_160817_products_add_column_subcategory_id.php
parsers/: dumper.pl  scrapper.pl
tg-notifier/: pyproject.toml
