[tool.poetry]
name = "laravel-online-market/tg-notifier"
version = "0.1.0"
description = ""
authors = ["Vchslv-Zkhrv <vchslv.zkhrv@gmail.com>"]
readme = "README.md"
packages = [{include = "laravel_online_market"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0.1"
pydantic = "^2.6.4"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
